# valence_sdf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  index.html
.github/workflows/: deploy-wasm.yml
assets/: puzzles_symmetric.csv
assets/fonts/fredoka/: fredoka-bold-digits.json  fredoka-semibold-digits.json
assets/fonts/ibm_plex_mono/: digits.json
assets/shaders/: experiment.wgsl  sdf_scene.wgsl  sdf_sphere.wgsl  seven_segment.wgsl
scripts/: build_cloudflare.sh  build_wasm.sh
server/: Cargo.toml
server/src/: main.rs
src/: camera.rs  graph.rs  input.rs  main.rs  sdf_material.rs
src/game/: mod.rs  progression.rs  session.rs
src/game/puzzle/: mod.rs  transforms.rs
src/graph/: edge.rs  kings_graph.rs  mod.rs  solution.rs  state.rs  valences.rs
src/visual/: experiment.rs  graph.rs  mod.rs  node_physics.rs  plugin.rs  utils.rs
src/visual/edges/: mod.rs  waves.rs
src/visual/interactions/: flee.rs  mod.rs  pointer.rs  trail_effects.rs
src/visual/nodes/: animations.rs  components.rs  mod.rs
src/visual/physics/: debug.rs  edge_spring_forces.rs  mod.rs  node_interactions.rs  node_repulsion.rs
src/visual/physics/forces/: edge_spring_forces.rs  mod.rs  repulsion.rs
src/visual/sdf/: material.rs  mod.rs  sync.rs
src/visual/sdf/digits/: mod.rs  transformations.rs
src/visual/sdf/edges/: cylinder.rs  mod.rs
src/visual/sdf/nodes/: ellipsoid.rs  mod.rs
src/visual/sdf/numbers/: atlas.rs  mod.rs  (+1 more)
src/visual/setup/: mod.rs  puzzle.rs  scene.rs
src/visual/ui/: hud.rs  hud_builder.rs  mod.rs  number_group.rs
(+4 files in other folders)
