[package]
name = "valence_sdf"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_log",
  "png",
] }
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
  "file_watcher",
  "dynamic_linking",
] }

# WASM-only
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.17.2", default-features = false, features = ["webgpu"] }
wasm-bindgen = "0.2.108"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
